5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1871_1709.log
== TEST (2019-07-02 16:09:27) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))

for i in range(m):
	if m[i]==n:
		a = mean(m[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:48) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))

for i in range(size(m)):
	if m[i]==n:
		a = mean(m[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:56) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))

for i in range(size(m)):
	if m[i]==n:
		a = mean(m[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:02) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[1]

for i in range(size(m)):
		a = mean(m[n])
print(round(a, 2)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:13) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[1]

for i in range(size(m)):
		a = mean(m[n])
print(round(a, 2)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:22) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[1]

for i in range(size(m)):
		a = mean(m[n])
		
print(round(a, 2)
-- ERROR:
File "XXXX", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:48:36) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[1]

for i in range(size(m)):
		a = mean(m[n])
		
print(round(a, 2)
-- EXECUTION TIME:
0.554153
-- ERROR:
  File "/home/codebench/codes/1871/1709/main.py", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:31) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[1]

for i in range(size(m)):
		a = mean(m[i,:])
		
print(round(a, 2)
-- ERROR:
File "XXXX", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:49:35) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[1]

for i in range(size(m)):
		a = mean(m[i,:])
		
print(round(a, 2)
-- EXECUTION TIME:
0.78564
-- ERROR:
  File "/home/codebench/codes/1871/1709/main.py", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:49) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[0]

for i in range(size(m)):
		a = mean(m[i,:])
		
print(round(a, 2)
-- EXECUTION TIME:
0.516634
-- ERROR:
  File "/home/codebench/codes/1871/1709/main.py", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:52:33) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[0]

for i in range(size(m)):
		b = mean(a[i,:])
		
print(round(b, 2)
-- EXECUTION TIME:
0.582536
-- ERROR:
  File "/home/codebench/codes/1871/1709/main.py", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:54:01) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[0]

for i in range(size(m)):
		b = mean(m[i,:])
		
print(round(b, 2)
-- ERROR:
File "XXXX", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:10) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[0]

for i in range(size(m)):
		b = mean(m[i,:])
		
print(round(b, 2)
-- EXECUTION TIME:
0.746291
-- ERROR:
  File "/home/codebench/codes/1871/1709/main.py", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:54:24) 
-- CODE:
from numpy import *
from numpy.linalg import*

m = array(eval(input('m: ')))
n = int(input('n: '))
a = shape(m)[0]

for i in range(size(m)):
		b = mean(m[i,:], a)
		
print(round(b, 2)
-- EXECUTION TIME:
0.56882
-- ERROR:
  File "/home/codebench/codes/1871/1709/main.py", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
